fix(theme): improve light theme contrast

--- a/src/styles/themes/base.css
+++ b/src/styles/themes/base.css
@@ -32,7 +32,7 @@
 
     --editor-divider: #c8ccd1;
     --editor-text-primary: #fa7970;
-    --editor-text-secondary: #77bdfb;
+    --editor-text-secondary: #164c9c;
     --editor-background-highlight: #d4d4d4;
     --editor-background-content: #ffffff;
     --editor-background-controls: #fdfdfd;
